deploy/dev/river-data-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: river-data
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: river-data
        image: ghcr.io/kingdonb/river-data-explorer:deploy-5813b5ca-1656696777 # {"$imagepolicy": "river-auto:latest-any"}
