deploy/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: river-data
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: river-data.dev.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: river-data
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - river-data.dev.hephy.pro
    secretName: river-data-tls
